...
    titulo.textAlignment = NSTextAlignmentCenter;
    titulo.translatesAutoresizingMaskIntoConstraints = NO;
    [self.view addSubview:titulo];

    // Botón "Comenzar"
    UIButton *botonComenzar = [UIButton buttonWithType:UIButtonTypeSystem];
    [botonComenzar setTitle:@"COMENZAR" forState:UIControlStateNormal];
    botonComenzar.titleLabel.font = [UIFont boldSystemFontOfSize:14];
    [botonComenzar setTitleColor:[UIColor systemPurpleColor] forState:UIControlStateNormal];
    botonComenzar.layer.borderColor = [UIColor systemPurpleColor].CGColor;
    botonComenzar.layer.borderWidth = 1.5;
    botonComenzar.layer.cornerRadius = 6;
    botonComenzar.accessibilityIdentifier = @"botonComenzar";
...
